--- a/templates/main.html
+++ b/templates/main.html
@@ -8,10 +8,10 @@
         <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
 
         <!-- LINK CSS FILE -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../static/CSS/style.css">
         
     </head>
        <body>
